--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -495,6 +495,7 @@ en:
     index:
       title: "Interpreter Details"
       create: "New Interpreter Details"
+    show:
       edit: "Edit Interpreter Details"
 
   layouts:
