TK-229 Add Interpreter details to profile (#232)
* TK-229 Add Interpreter details to profile

- Fix interpreter details form not saving
- Add unique validation to interpreter_details
- Update interpreter_details view to include account_navbar
- Update account_navbar to include interpreter detiails

* TK-229 Updates

- update interpreter account_navbar link_to to show detail page
- add authenticate interpreter on interpreter_details controller
- update interpreter_details show page ui
- hide billing link in sidenav for interpreter users

* TK-229 Updates

- remove billing in dropdown nav for interpreters
- remove delete button in edit interpreter detail
- show more interpreter detail info in show page

---------

Co-authored-by: Jose Stephen Peña <jose.pena@cybersoftbpo.com>

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -216,6 +216,7 @@ en:
       billing: "Billing"
       accounts: "Accounts"
       api_tokens: "API"
+      interpreter_details: "Interpreter Details"
     flash:
       confirm_payment: "Confirm your latest payment"
     navbar:
@@ -489,6 +490,13 @@ en:
         verify_description: "After scanning the barcode image, the app will display a code that you can enter below."
         cancel: "Cancel"
         verify: "Verify"
+
+  interpreter_details:
+    index:
+      title: "Interpreter Details"
+      create: "New Interpreter Details"
+    show:
+      edit: "Edit Interpreter Details"
 
   layouts:
     mailer:
