--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -231,6 +231,7 @@ en:
       sign_out: "Sign Out"
       log_in: "Log In"
       sign_up: "Sign Up"
+      interpreter_details: "Interpreter Details"
     oauth:
       apple: "Sign in with Apple"
       developer: "Developer"
