--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -523,6 +523,11 @@ en:
     empty: "Nothing to see here — yet."
     empty_description: "We'll let you know when you have new notifications."
 
+  time_offs:
+    form:
+      delete:
+        are_you_sure: "Are you sure you want to delete this Time Off?"
+
   activerecord:
     attributes:
       api_token:
@@ -530,6 +535,9 @@ en:
         created_at: "Created"
       account:
         name_on_card: "Name on Card"
+      time_off:
+        start_datetime: "Start Date Time"
+        end_datetime: "End Date Time"
 
     errors:
       models:
