--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -215,6 +215,7 @@ en:
       about: "About Us"
       privacy: "Privacy Policy"
       terms: "Terms of Service"
+      contact: "Contact Us"
     account_navbar:
       profile: "Profile"
       password: "Password"
